--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -37,8 +37,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageVersion>
+		<PackageVersion Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.1" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.1" />
 		<PackageVersion Include="Microsoft.Extensions.Http.Polly" Version="10.0.1" />
-		<PackageVersion Include="Microsoft.Extensions.Logging" Version="10.0.1" />
 		<PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
 		<PackageVersion Include="Npgsql" Version="10.0.1" />
 		<PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
