--- a/Svc.CRMM/CRMM.Lead/Lead.API/Program/appsettings.json
+++ b/Svc.CRMM/CRMM.Lead/Lead.API/Program/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LeadDb": "Host=localhost;Port=5432;Database=crmm_lead;Username=postgres;Password=123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
