--- a/Svc.CRMM/CRMM.Lead/Lead.App/Lead.App.csproj
+++ b/Svc.CRMM/CRMM.Lead/Lead.App/Lead.App.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lead.Domain\Lead.Domain.csproj" />
-    <ProjectReference Include="..\Lead.Utility\Lead.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
   </ItemGroup>
 </Project>
